--- a/TreeTopic/appsettings.json
+++ b/TreeTopic/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TenantDb": "Host=localhost;Port=5432;Database=treetopic_tenants;User Id=postgres;Password=password;",
+    "SharedApp": "Host=localhost;Port=5432;Database=treetopic_shared;User Id=postgres;Password=password;"
+  },
+  "Google": {
+    "ClientId": "your-google-client-id",
+    "ClientSecret": "your-google-client-secret"
+  }
 }
