--- a/TreeTopic.AppHost/TreeTopic.AppHost.csproj
+++ b/TreeTopic.AppHost/TreeTopic.AppHost.csproj
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.0" />
-    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.5.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.1" />
+    <PackageReference Include="Aspire.Hosting.Keycloak" Version="13.0.1-preview.1.25575.3" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
